<resources>
    <string name="app_name">IS4448 Project</string>
    <string name="covid_statistics">Covid Statistics</string>
    <string name="heroes">Heroes</string>
    <string name="welcome">Welcome</string>
    <string name="what_would_you_like_to_view_today">What would you like to view today?</string>
    <string name="ireland">Ireland</string>
    <string name="today_s_covid_statistics">Today\'s Covid Statistics</string>
    <string name="_24_hours">24 Hours</string>
    <string name="deaths">New Deaths</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="prevention">Prevention</string>
    <string name="symptoms">Symptoms</string>
    <string name="new_cases">New Cases</string>
    <string name="add">Add</string>
    <string name="add_a_hero">Add a Hero</string>
    <string name="update">Update</string>
</resources>