<?xml version="1.0" encoding="utf-8"?>
<!-- Some code here adapted from   on the website androidcodefinder.com -->
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FCFCFC">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/header"
        android:backgroundTint="@color/Blue"
        android:layout_marginTop="-10dp">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="40sp">

        </TextView>
    </ScrollView>

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/what_would_you_like_to_view_today"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="130dp"
        android:gravity="center">

    </TextView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">



                <androidx.cardview.widget.CardView
                    android:id="@+id/cvNews"
                    android:layout_width="300dp"
                    android:layout_height="140dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="0dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:id="@+id/linHeroes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="105dp"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="200dp"
                                android:layout_height="100dp"
                                android:padding="10dp"
                                android:src="@drawable/hero" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heroes"
                            android:textColor="#000"
                            android:textSize="18dp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="140dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="0dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:id="@+id/linCovidStats"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="105dp"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="200dp"
                                android:layout_height="100dp"
                                android:padding="10dp"
                                android:src="@drawable/covid"
                                />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/covid_statistics"
                            android:textColor="#000"
                            android:textSize="18dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>



            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>